Adding paged response to get all user methods